[package]
name = "progresslib2-server-extension"
version = "0.1.0"
authors = ["nikita-skobov"]
edition = "2018"

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
actix-http = "2.2.0"
progresslib2 = { git = "https://github.com/nikita-skobov/progresslib2" }

[patch."https://github.com/nikita-skobov/progresslib2"]
progresslib2 = { path = "../progresslib2" }
